--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --foreground: rgba(255, 255, 255, 0.87);
   --background: #242424;
+  --accent: #00a082;
 
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
