feat(game): move images to src & change favicon

--- a/src/components/App/components/Game/View.module.scss
+++ b/src/components/App/components/Game/View.module.scss
@@ -1,10 +1,8 @@
-import { css } from "@emotion/css";
-
-export const wrapper = css`
+.wrapper {
   overflow: hidden;
   border-radius: 12px;
 
   canvas {
     display: block;
   }
-`;
+}
