--- a/src/components/App/View.module.scss
+++ b/src/components/App/View.module.scss
@@ -1,8 +1,6 @@
-import { css } from "@emotion/css";
-
-export const container = css`
+.container {
   padding: 0 16px;
   max-width: 800px;
   min-height: 100vh;
   margin: 0 auto;
-`;
+}
