feat(dialog): add profile

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: var(--foreground);
+  background: url('./assets/bg_pattern.png') center;
   background-color: var(--background);
 
   font-synthesis: none;
@@ -31,14 +31,4 @@ body {
 
 body * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    --foreground: #213547;
-    --background: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
 }
