--- a/src/components/App/components/Main/components/Game/View.module.scss
+++ b/src/components/App/components/Main/components/Game/View.module.scss
@@ -1,7 +1,10 @@
-.wrapper {
-  overflow: hidden;
-  border-radius: 12px;
+.container {
+  padding: 20px 0;
+}
 
+.wrapper {
+  border-top: 2px solid #8a8a8a;
+  border-bottom: 2px solid #484848;
   canvas {
     display: block;
   }
