--- a/src/components/App/components/Main/components/Game/components/Dialog/View.module.scss
+++ b/src/components/App/components/Main/components/Game/components/Dialog/View.module.scss
@@ -1,7 +1,7 @@
 .dialogModifier {
   width: auto;
-  min-width: 500px;
-  padding: 72px 16px 16px;
+  min-width: 200px;
+  padding: 72px 0 16px;
   background: var(--background) url('/src/assets/bg_pattern.png') center;
   h2 {
     position: absolute;
@@ -60,4 +60,10 @@
       background-color: #acacac;
     }
   }
+}
+
+.container {
+  overflow-y: auto;
+  max-height: calc(100vh - 120px);
+  padding: 0 16px;
 }
