feat(project): add and finish  project

--- a/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Project/View.module.scss
+++ b/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Project/View.module.scss
@@ -8,7 +8,7 @@
 }
 
 .thumbnailContainer {
-  height: 480px;
+  height: var(--ColH);
   max-height: calc(100vh - 120px);
   overflow-y: auto;
   padding-right: 32px;
