--- a/src/components/App/components/Main/components/Game/components/Dialog/View.module.scss
+++ b/src/components/App/components/Main/components/Game/components/Dialog/View.module.scss
@@ -2,6 +2,7 @@
   width: auto;
   min-width: 200px;
   padding: 72px 0 16px;
+  border: none;
   background: var(--background) url('/src/assets/bg_pattern.png') center;
   h2 {
     position: absolute;
