feat(data): complete experience

--- a/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Education/View.module.scss
+++ b/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Education/View.module.scss
@@ -1,7 +1,26 @@
+@keyframes moving {
+  0% {
+    transform: rotate3d(-1, -1, 0, 30deg);
+  }
+  25% {
+    transform: rotate3d(-1, 1, 0, 30deg);
+  }
+  50% {
+    transform: rotate3d(1, 1, 0, 30deg);
+  }
+  75% {
+    transform: rotate3d(1, -1, 0, 30deg);
+  }
+  100% {
+    transform: rotate3d(-1, -1, 0, 30deg);
+  }
+}
+
 .logo {
   display: block;
   object-fit: contain;
   justify-self: center;
+  animation: moving 10s infinite linear;
 }
 
 .container {
