--- a/src/components/App/components/Main/components/Game/components/Dialog/View.module.scss
+++ b/src/components/App/components/Main/components/Game/components/Dialog/View.module.scss
@@ -1,9 +1,10 @@
 .dialogModifier {
   width: auto;
   min-width: 200px;
-  padding: 72px 0 16px;
+  padding: 72px 0 32px;
   border: none;
   background: var(--background) url('/src/assets/bg_pattern.png') center;
+  box-shadow: 0px 4px 12px 0 rgb(17 17 17 / 50%);
   h2 {
     position: absolute;
     top: 16px;
@@ -32,6 +33,8 @@
   width: 40px;
   height: 40px;
   border-radius: 8px;
+  transition: transform 500ms cubic-bezier(0.6, -0.9, 0.6, 1.9);
+  --color: #666666;
 
   &:focus-visible {
     outline: 2px solid turquoise;
@@ -40,31 +43,47 @@
   &::before,
   &::after {
     content: '';
+    box-sizing: border-box;
     position: absolute;
     width: 4px;
     height: 32px;
     top: 4px;
     left: calc(50% - 2px);
     border-radius: 2px;
-    background-color: #666666;
   }
   &::before {
     transform: rotate(45deg);
+    background-image: linear-gradient(
+      to bottom,
+      var(--color) 45%,
+      transparent 45%,
+      transparent 65%,
+      var(--color) 45%
+    );
   }
   &::after {
     transform: rotate(-45deg);
+    background-color: var(--color);
   }
 
   &:hover {
-    &::before,
-    &::after {
-      background-color: #acacac;
+    --color: #acacac;
+    transform: rotate(90deg) scale(1.2);
+
+    &::before {
+      background-image: linear-gradient(
+        to top,
+        var(--color) 45%,
+        transparent 45%,
+        transparent 65%,
+        var(--color) 45%
+      );
     }
   }
 }
 
 .container {
   overflow-y: auto;
-  max-height: calc(100vh - 120px);
+  max-height: calc(100vh - 150px);
   padding: 0 16px;
 }
