--- a/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Experience/View.module.scss
+++ b/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Experience/View.module.scss
@@ -1,3 +1,17 @@
+@keyframes pulse {
+  0% {
+    opacity: 0.3;
+    transform: scale(0);
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1);
+  }
+}
+
 .container {
   margin-bottom: 32px;
 
@@ -10,28 +24,40 @@
       width: 40px;
       .dot {
         all: unset;
+        --size: 24px;
         cursor: pointer;
         box-sizing: border-box;
         position: absolute;
-        top: calc(50% - 12px);
-        left: calc(50% - 12px);
-        width: 24px;
-        height: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top: calc(50% - calc(var(--size) / 2));
+        left: calc(50% - calc(var(--size) / 2));
+        width: var(--size);
+        height: var(--size);
         border-radius: 50%;
         border: 2px solid var(--accent);
+        transition: all 250ms;
 
         &::before {
           content: '';
+          box-sizing: border-box;
           display: block;
           width: 8px;
           height: 2px;
-          margin: 6px;
           background-color: var(--accent);
           transition: all 250ms;
         }
 
         &:focus-visible {
           outline: 2px solid turquoise;
+        }
+
+        &:hover {
+          --size: 28px;
+          &::before {
+            width: 12px;
+          }
         }
       }
       &::before,
@@ -54,12 +80,16 @@
     }
 
     .right {
-      width: 400px;
+      width: 460px;
       overflow: hidden;
 
       h3,
       p {
         margin: 0;
+      }
+
+      h3 {
+        color: gold;
       }
 
       .headBtn {
@@ -85,8 +115,11 @@
       }
 
       .desc {
+        list-style: circle;
+        margin: 0;
         max-height: 0;
-        transition: all 500ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+        padding: 0 20px;
+        transition: all 500ms;
       }
     }
 
@@ -112,6 +145,7 @@
     }
   }
   &:last-of-type {
+    margin-bottom: 0;
     .row {
       .left::after {
         content: none;
@@ -128,16 +162,48 @@
   &[data-active] {
     .row {
       .left {
-        .dot::before {
-          height: 8px;
-          border-radius: 50%;
-          background-color: gold;
+        .dot {
+          &::before {
+            width: 0;
+            height: 0;
+            background-color: transparent;
+            border-radius: 50%;
+            border: 4px solid gold;
+          }
+
+          &::after {
+            content: '';
+            box-sizing: border-box;
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background-color: gold;
+            transform: scale(0);
+            animation: pulse 2s 1s infinite;
+          }
+
+          &:hover {
+            &::before,
+            &::after {
+              width: 24px;
+              height: 24px;
+            }
+            &::before {
+              border: 7px solid gold;
+            }
+            &::after {
+              animation: none;
+            }
+          }
         }
       }
       .right {
         .desc {
-          max-height: 150px;
-          margin-top: 16px;
+          max-height: 290px;
         }
       }
     }
