--- a/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Project/View.module.scss
+++ b/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Project/View.module.scss
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 182px auto;
+  grid-template-columns: 166px auto;
 }
 
 .left {
@@ -11,7 +11,7 @@
   height: var(--ColH);
   max-height: calc(100vh - 120px);
   overflow-y: auto;
-  padding-right: 32px;
+  padding-right: 16px;
   &::-webkit-scrollbar {
     display: none;
   }
@@ -43,7 +43,7 @@
     top: calc(50% - 1px);
     width: 0;
     height: 2px;
-    background-color: var(--accent);
+    background-color: #555555;
     transition: all 250ms;
   }
 
@@ -87,8 +87,8 @@
   }
 
   &[data-active] {
-    border-color: var(--accent);
-    background-color: var(--accent);
+    border-color: #555555;
+    background-color: #555555;
 
     &::after {
       width: 32px;
@@ -103,7 +103,7 @@
 .shadow {
   position: absolute;
   left: 0;
-  width: calc(100% - 32px);
+  width: calc(100% - 16px);
   height: 50px;
   z-index: 1;
   pointer-events: none;
