--- a/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Project/View.module.scss
+++ b/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Project/View.module.scss
@@ -1,3 +1,14 @@
+@keyframes thumbDisplay {
+  from {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 .container {
   display: grid;
   grid-template-columns: 166px auto;
@@ -31,6 +42,7 @@
   height: 100px;
   border: var(--borderW) solid #555555;
   transition: all 250ms;
+  animation: thumbDisplay 500ms var(--delay) ease backwards;
 
   & * {
     transition: all 250ms;
