feat(data): get all data from firebase

--- a/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Profile/View.module.scss
+++ b/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Profile/View.module.scss
@@ -1,5 +1,12 @@
+.container {
+  width: 400px;
+}
+
 .row {
   margin-bottom: 16px;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .descContainer {
