--- a/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Project/components/Detail/components/Carousel/View.module.scss
+++ b/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Project/components/Detail/components/Carousel/View.module.scss
@@ -1,41 +1,47 @@
 .wrapper {
   position: relative;
+  overflow: hidden;
 
   .arrowBtn {
     all: unset;
     cursor: pointer;
     box-sizing: border-box;
     position: absolute;
-    display: none;
-    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: calc(50% - 24px);
     width: 48px;
-    height: 100%;
+    height: 48px;
     text-align: center;
+    border-radius: 50%;
+    background: #393939;
     z-index: 1;
+    transition: transform 200ms;
     &[data-pos='left'] {
-      border-top-left-radius: 14px;
-      background-image: linear-gradient(
-        to left,
-        transparent,
-        var(--background)
-      );
+      left: 12px;
+      transform: translateX(-60px);
     }
     &[data-pos='right'] {
-      right: 0;
-      border-top-right-radius: 14px;
-      background-image: linear-gradient(
-        to right,
-        transparent,
-        var(--background)
-      );
+      right: 12px;
+      transform: translateX(60px);
     }
     svg {
       pointer-events: none;
     }
+
+    &[data-show] {
+      &[data-pos='left'] {
+        transform: translateX(-42px);
+      }
+      &[data-pos='right'] {
+        transform: translateX(42px);
+      }
+    }
   }
 
-  &:hover .arrowBtn {
-    display: block;
+  &:hover .arrowBtn[data-show] {
+    transform: translateX(0);
   }
 }
 
