--- a/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Project/components/Detail/View.module.scss
+++ b/src/components/App/components/Main/components/Game/components/Dialog/components/Contents/components/Project/components/Detail/View.module.scss
@@ -25,6 +25,11 @@
 .inner {
   height: 100%;
   overflow-y: auto;
+  border-radius: 16px 16px 0 0;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .title {
