--- a/src/components/App/components/Main/components/Footer/View.module.scss
+++ b/src/components/App/components/Main/components/Footer/View.module.scss
@@ -11,4 +11,12 @@
   margin: 0 auto;
   font-size: 0.7rem;
   text-align: center;
+
+  p {
+    margin: 0;
+
+    span {
+      color: var(--accent);
+    }
+  }
 }
