feat(landinf): add bg

--- a/src/components/App/components/Main/components/Landing/View.module.scss
+++ b/src/components/App/components/Main/components/Landing/View.module.scss
@@ -11,6 +11,7 @@
   background-color: #4f4f54;
   border-top: 2px solid #8a8a8a;
   border-bottom: 2px solid #484848;
+  background-image: url('/src/assets/bg_pattern.png');
 }
 
 .inner {
